// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`photo createPhoto: should work 1`] = `
Object {
  "data": Object {
    "createPhoto": Object {
      "createdAt": "some-date-now",
      "id": "19e073cc-7e37-465e-8f19-1afdce2634ab",
      "key": "invoice/avon/parsing/reactive_iowa_new_mexico.uvvm",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`photo photoByEntryId: should work 1`] = `
Object {
  "data": Object {
    "photoByEntry": Array [
      Object {
        "id": "7af9b8dc-7110-43fc-bc59-55c862cb73d4",
        "key": "interactive/landing.kml",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
